--- a/source/css/style.css
+++ b/source/css/style.css
@@ -407,6 +407,9 @@ input[type="radio"].visually-hidden {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-decoration: none; }
+  .page-header__email:hover {
+    text-decoration: underline;
+    color: #9696a2; }
   .page-header__email::before {
     content: "";
     position: absolute;
@@ -431,6 +434,9 @@ input[type="radio"].visually-hidden {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-decoration: none; }
+  .page-header__phone:hover {
+    text-decoration: underline;
+    color: #9696a2; }
   .page-header__phone::before {
     content: "";
     position: absolute;
@@ -546,7 +552,7 @@ input[type="radio"].visually-hidden {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0 auto; }
-  .start-home b {
+  .start-home a {
     color: #ffffff;
     font-size: 14px;
     line-height: 16px;
@@ -558,7 +564,10 @@ input[type="radio"].visually-hidden {
     position: absolute;
     bottom: -193px;
     left: 6px;
-    font-weight: normal; }
+    font-weight: normal;
+    text-decoration: none; }
+    .start-home a:hover {
+      text-decoration: underline; }
 
 .start-home__message {
   position: relative;
@@ -600,7 +609,8 @@ input[type="radio"].visually-hidden {
 .start-home__img {
   position: absolute;
   top: -57px;
-  right: -53px; }
+  right: -53px;
+  z-index: 2; }
   .start-home__img::before {
     content: "";
     position: absolute;
@@ -611,14 +621,15 @@ input[type="radio"].visually-hidden {
     background-image: url(../img/triangle.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    z-index: -1; }
   .start-home__img img {
     display: block; }
 
 @media (max-width: 1023px) {
   .start-home {
     padding-left: 94px; }
-    .start-home b {
+    .start-home a {
       display: none; }
   .start-home__message {
     max-width: 60%; }
@@ -1299,7 +1310,6 @@ input[type="radio"].visually-hidden {
 
 .page-footer__social {
   position: relative;
-  width: 216px;
   margin-right: 50px; }
   .page-footer__social p {
     position: absolute;
@@ -1310,7 +1320,9 @@ input[type="radio"].visually-hidden {
     width: 233px;
     margin: 0;
     bottom: -97px;
-    left: 223px; }
+    left: 223px;
+    color: #1B2D37;
+    opacity: 0.5; }
   .page-footer__social img {
     display: block;
     margin-bottom: 54px; }
@@ -1348,21 +1360,45 @@ input[type="radio"].visually-hidden {
     line-height: 25px;
     color: #1B2D37;
     opacity: 0.5; }
+  .page-footer__contacts a {
+    font-size: 15px;
+    line-height: 25px;
+    display: block;
+    text-decoration: none;
+    color: #1B2D37;
+    opacity: 0.5; }
+    .page-footer__contacts a:hover {
+      text-decoration: underline; }
 
 .page-footer__bottom {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 60px; }
+  margin-top: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .page-footer__bottom p {
     font-size: 13px;
     line-height: 24px;
     letter-spacing: 0.04em;
-    text-transform: uppercase; }
-  .page-footer__bottom p:first-of-type {
+    text-transform: uppercase;
+    color: #1B2D37;
+    opacity: 0.5;
     margin-right: 31.8%; }
-  .page-footer__bottom p:last-of-type {
+  .page-footer__bottom a {
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    color: #1B2D37;
+    opacity: 0.5;
+    text-decoration: none;
+    display: block;
+    text-transform: uppercase; }
+    .page-footer__bottom a:hover {
+      text-decoration: underline; }
+  .page-footer__bottom a:last-of-type {
     margin-left: auto; }
 
 @media (max-width: 1023px) {
@@ -1403,7 +1439,9 @@ input[type="radio"].visually-hidden {
   .page-footer__contacts {
     margin-right: 11px; }
   .page-footer__bottom {
-    margin-top: 46px; }
+    margin-top: 46px;
+    padding-top: 13px;
+    padding-bottom: 13px; }
     .page-footer__bottom p:first-of-type {
       display: none; } }
 
@@ -1472,9 +1510,9 @@ input[type="radio"].visually-hidden {
         -ms-flex-align: center;
             align-items: center;
     margin-top: 45px; }
-    .page-footer__bottom p:last-of-type {
+    .page-footer__bottom a:last-of-type {
       margin-left: 0;
-      margin-top: 7px; } }
+      margin-top: 20px; } }
 
 .social-list {
   list-style: none;
@@ -1482,11 +1520,9 @@ input[type="radio"].visually-hidden {
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 112px; }
+  display: flex; }
+  .social-list li:not(:last-child) {
+    margin-right: 15.5px; }
 
 .social-list__link:hover svg path {
   fill: #00B2FF; }
@@ -1507,6 +1543,9 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
   color: #1B2D37;
   opacity: 0.5; }
+  .footer-nav__item a:hover {
+    text-decoration: underline;
+    color: #000000; }
 
 .footer-nav__item:first-of-type {
   margin-right: 74px; }
@@ -1519,5 +1558,170 @@ input[type="radio"].visually-hidden {
 @media (max-width: 767px) {
   .footer-nav__list {
     display: none; } }
+
+.modal {
+  width: 490px;
+  background-color: #00B2FF;
+  position: absolute;
+  top: 50%;
+  margin-top: -302.5px;
+  left: 50%;
+  margin-left: -245px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  z-index: 100; }
+
+.modal__close {
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  background-color: transparent;
+  font-size: 0;
+  position: absolute;
+  top: 20px;
+  right: 20.44px;
+  width: 16.56px;
+  height: 16.56px;
+  background-image: url("../img/close.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover; }
+
+.callback-form {
+  width: 100%; }
+  .callback-form p:first-of-type {
+    width: 100%;
+    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 39px;
+    color: #FFFFFF;
+    margin: 0;
+    margin-bottom: 10px; }
+  .callback-form p:last-of-type {
+    width: 381px;
+    margin: 0;
+    padding-left: 4px;
+    color: #ffffff;
+    margin-bottom: 52px; }
+
+.callback-form__field-name {
+  width: 100%;
+  margin-bottom: 30px; }
+  .callback-form__field-name input[type="text"] {
+    width: 100%;
+    height: 52px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding-left: 16px;
+    color: #ffffff;
+    background-color: #19BAFF;
+    border: none; }
+  .callback-form__field-name input::-webkit-input-placeholder {
+    color: #ffffff; }
+  .callback-form__field-name input::-moz-placeholder {
+    color: #ffffff; }
+  .callback-form__field-name input:-ms-input-placeholder {
+    color: #ffffff; }
+  .callback-form__field-name input::-ms-input-placeholder {
+    color: #ffffff; }
+  .callback-form__field-name input::placeholder {
+    color: #ffffff; }
+  .callback-form__field-name input:first-of-type {
+    margin-bottom: 30px; }
+
+.callback-form__field-textarea {
+  width: 100%;
+  margin-bottom: 30px; }
+  .callback-form__field-textarea textarea {
+    width: 100%;
+    height: 104px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border: none;
+    background-color: #19BAFF;
+    color: #ffffff;
+    padding-top: 13px;
+    padding-left: 16px; }
+    .callback-form__field-textarea textarea::-webkit-input-placeholder {
+      color: #ffffff; }
+    .callback-form__field-textarea textarea::-moz-placeholder {
+      color: #ffffff; }
+    .callback-form__field-textarea textarea:-ms-input-placeholder {
+      color: #ffffff; }
+    .callback-form__field-textarea textarea::-ms-input-placeholder {
+      color: #ffffff; }
+    .callback-form__field-textarea textarea::placeholder {
+      color: #ffffff; }
+
+.callback-form__field-bottom {
+  width: 100%;
+  position: relative; }
+  .callback-form__field-bottom button {
+    width: 100%;
+    height: 45px;
+    background-color: inherit;
+    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border-radius: 5px;
+    margin-bottom: 35px;
+    cursor: pointer; }
+    .callback-form__field-bottom button:hover {
+      background-color: #ffffff;
+      color: #00B2FF; }
+  .callback-form__field-bottom label {
+    display: block;
+    position: relative;
+    width: 337px;
+    color: #FFFFFF;
+    opacity: 0.8;
+    padding-left: 50px;
+    padding-top: 9px;
+    font-size: 14px;
+    line-height: 16px; }
+    .callback-form__field-bottom label::before {
+      content: "";
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      border: 1px solid #ffffff;
+      left: 18px; }
+  .callback-form__field-bottom input[type="checkbox"]:checked + label::before {
+    content: "";
+    background-image: url("../img/vector.svg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center center; }
+
+.wrapp-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8); }
 
 /*# sourceMappingURL=style.css.map */
