--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,6 @@
 @import "blocks/page-footer";
 @import "blocks/social-list";
 @import "blocks/footer-nav";
+@import "blocks/modal";
+@import "blocks/callback-form";
+@import "blocks/wrapp-modal";
