--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -14,6 +14,11 @@
     text-decoration: none;
     color: #1B2D37;
     opacity: 0.5;
+
+    &:hover {
+      text-decoration: underline;
+      color: #000000;
+    }
   }
 
   &:first-of-type {
