--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -31,7 +31,6 @@
 
 .page-footer__social {
   position: relative;
-  width: 216px;
   margin-right: 50px;
 
   & p {
@@ -44,6 +43,8 @@
     margin: 0;
     bottom: -97px;
     left: 223px;
+    color: #1B2D37;
+    opacity: 0.5;
   }
 
   & img {
@@ -92,25 +93,53 @@
     color: #1B2D37;
     opacity: 0.5;
   }
+
+  & a {
+    font-size: 15px;
+    line-height: 25px;
+    display: block;
+    text-decoration: none;
+    color: #1B2D37;
+    opacity: 0.5;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .page-footer__bottom {
   position: relative;
   display: flex;
   margin-top: 60px;
+  align-items: center;
 
   & p {
     font-size: 13px;
     line-height: 24px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-  }
-
-  & p:first-of-type {
+    color: #1B2D37;
+    opacity: 0.5;
     margin-right: 31.8%;
   }
 
-  & p:last-of-type {
+  & a {
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    color: #1B2D37;
+    opacity: 0.5;
+    text-decoration: none;
+    display: block;
+    text-transform: uppercase;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  & a:last-of-type {
     margin-left: auto;
   }
 }
@@ -168,6 +197,8 @@
 
   .page-footer__bottom {
     margin-top: 46px;
+    padding-top: 13px;
+    padding-bottom: 13px;
 
     & p:first-of-type {
       display: none;
@@ -250,9 +281,9 @@
     align-items: center;
     margin-top: 45px;
 
-    & p:last-of-type {
+    & a:last-of-type {
       margin-left: 0;
-      margin-top: 7px;
+      margin-top: 20px;
     }
   }
 }
