--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -3,8 +3,10 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-between;
-  width: 112px;
+
+  & li:not(:last-child) {
+    margin-right: 15.5px;
+  }
 }
 
 .social-list__link {
