--- a/source/sass/blocks/start-home.scss
+++ b/source/sass/blocks/start-home.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   margin: 0 auto;
 
-  & b {
+  & a {
     color: #ffffff;
     font-size: 14px;
     line-height: 16px;
@@ -17,6 +17,11 @@
     bottom: -193px;
     left: 6px;
     font-weight: normal;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -65,6 +70,7 @@
   position: absolute;
   top: -57px;
   right: -53px;
+  z-index: 2;
 
   &::before {
     content: "";
@@ -77,6 +83,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    z-index: -1;
   }
 
 
@@ -90,7 +97,7 @@
   .start-home {
     padding-left: 94px;
 
-    & b {
+    & a {
       display: none;
     }
   }
