--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,6 +1,6 @@
 .modal {
   width: 490px;
-  background-color: #00B2FF;
+  background-color: #00b2ff;
   position: absolute;
   top: 50%;
   margin-top: -302.5px;
