--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,15 +1,15 @@
 .services {
-  background-color: #1B2D37;
+  background-color: #1b2d37;
   padding-top: 89px;
   padding-bottom: 128px;
 
   & h2 {
-    font-family:"Roboto Condensed", "Calibri", sans-serif;
+    font-family: "Roboto Condensed", "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 36px;
     line-height: 51px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin: 0;
     margin-bottom: 52px;
   }
@@ -35,7 +35,7 @@
     position: absolute;
     width: 63px;
     height: 63px;
-    background-color: #00B2FF;
+    background-color: #00b2ff;
     background-image: url("../img/arrow.svg");
     background-repeat: no-repeat;
     background-size: 6px 9px;
@@ -45,14 +45,13 @@
   }
 
   &:hover {
-    border: 1px solid #00B2FF;
-
+    border: 1px solid #00b2ff;
   }
 
   & h3 {
     width: 160px;
     color: #ffffff;
-    font-family:"Roboto Condensed", "Calibri", sans-serif;
+    font-family: "Roboto Condensed", "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -82,7 +81,7 @@
   }
 }
 
-@media(max-width: 1023px) {
+@media (max-width: 1023px) {
   .services {
     padding-top: 51px;
     padding-bottom: 78px;
@@ -129,7 +128,7 @@
   }
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .services {
     padding-bottom: 64px;
 
