--- a/source/sass/blocks/callback-form.scss
+++ b/source/sass/blocks/callback-form.scss
@@ -8,7 +8,7 @@
     font-weight: normal;
     font-size: 28px;
     line-height: 39px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin: 0;
     margin-bottom: 10px;
   }
@@ -32,7 +32,7 @@
     box-sizing: border-box;
     padding-left: 16px;
     color: #ffffff;
-    background-color: #19BAFF;
+    background-color: #19baff;
     border: none;
   }
 
@@ -54,7 +54,7 @@
     height: 104px;
     box-sizing: border-box;
     border: none;
-    background-color: #19BAFF;
+    background-color: #19baff;
     color: #ffffff;
     padding-top: 13px;
     padding-left: 16px;
@@ -81,8 +81,8 @@
     text-align: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: #FFFFFF;
-    border: 1px solid #FFFFFF;
+    color: #ffffff;
+    border: 1px solid #ffffff;
     box-sizing: border-box;
     border-radius: 5px;
     margin-bottom: 35px;
@@ -90,7 +90,7 @@
 
     &:hover {
       background-color: #ffffff;
-      color: #00B2FF;
+      color: #00b2ff;
     }
   }
 
@@ -98,7 +98,7 @@
     display: block;
     position: relative;
     width: 337px;
-    color: #FFFFFF;
+    color: #ffffff;
     opacity: 0.8;
     padding-left: 50px;
     padding-top: 9px;
@@ -116,7 +116,7 @@
     }
   }
 
-  & input[type="checkbox"]:checked+label::before {
+  & input[type="checkbox"]:checked + label::before {
     content: "";
     background-image: url("../img/vector.svg");
     background-repeat: no-repeat;
