--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-  background-color: #00B2FF;
+  background-color: #00b2ff;
   padding-top: 90px;
   padding-bottom: 114px;
   background-image: url("../img/triangle.svg");
@@ -26,7 +26,7 @@
   }
 }
 
-@media(max-width: 1023px) {
+@media (max-width: 1023px) {
   .feedback {
     background-image: none;
     padding-top: 79px;
@@ -42,7 +42,7 @@
   }
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .feedback {
     padding-top: 30px;
     padding-bottom: 42px;
