--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -7,12 +7,11 @@
 }
 
 .footer-nav__item {
-
   & a {
     font-size: 15px;
     line-height: 25px;
     text-decoration: none;
-    color: #1B2D37;
+    color: #1b2d37;
     opacity: 0.5;
 
     &:hover {
@@ -32,7 +31,7 @@
   padding: 0;
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .footer-nav__list {
     display: none;
   }
