--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -13,7 +13,7 @@
     font-weight: normal;
     font-size: 36px;
     line-height: 51px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin: 0;
     margin-bottom: 10px;
   }
@@ -38,7 +38,7 @@
     box-sizing: border-box;
     padding-left: 16px;
     color: #ffffff;
-    background-color: #19BAFF;
+    background-color: #19baff;
     border: none;
   }
 
@@ -57,7 +57,7 @@
     height: 154px;
     box-sizing: border-box;
     border: none;
-    background-color: #19BAFF;
+    background-color: #19baff;
     color: #ffffff;
     padding-top: 13px;
     padding-left: 16px;
@@ -66,7 +66,6 @@
       color: #ffffff;
     }
   }
-
 }
 
 .form__field-bottom {
@@ -87,8 +86,8 @@
     text-align: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: #FFFFFF;
-    border: 1px solid #FFFFFF;
+    color: #ffffff;
+    border: 1px solid #ffffff;
     box-sizing: border-box;
     border-radius: 5px;
     margin-left: 4px;
@@ -96,14 +95,14 @@
 
     &:hover {
       background-color: #ffffff;
-      color: #00B2FF;
+      color: #00b2ff;
     }
   }
 
   & label {
     position: relative;
     width: 230px;
-    color: #FFFFFF;
+    color: #ffffff;
     opacity: 0.8;
     padding-left: 50px;
     padding-top: 9px;
@@ -121,7 +120,7 @@
     }
   }
 
-  & input[type="checkbox"]:checked+label::before {
+  & input[type="checkbox"]:checked + label::before {
     content: "";
     background-image: url("../img/vector.svg");
     background-repeat: no-repeat;
@@ -130,7 +129,7 @@
   }
 }
 
-@media(max-width: 1023px) {
+@media (max-width: 1023px) {
   .form {
     width: 100%;
 
@@ -139,6 +138,7 @@
       line-height: 45px;
       margin-bottom: 17px;
     }
+
     & p:last-of-type {
       margin-bottom: 55px;
     }
@@ -151,7 +151,7 @@
   }
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .form {
     & p:first-of-type {
       font-size: 28px;
@@ -167,7 +167,7 @@
   .form__field-name {
     flex-wrap: wrap;
     height: 132px;
-    align-content:space-between ;
+    align-content: space-between;
 
     & input[type="text"] {
       width: 100%;
