--- a/source/sass/blocks/start-home.scss
+++ b/source/sass/blocks/start-home.scss
@@ -50,7 +50,7 @@
   font-weight: normal;
   font-size: 22px;
   line-height: 34px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin: 0;
   padding-left: 93px;
   margin-bottom: 45px;
@@ -79,7 +79,7 @@
     left: 13px;
     width: 611px;
     height: 487px;
-    background-image: url(../img/triangle.svg);
+    background-image: url("../img/triangle.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -92,8 +92,7 @@
   }
 }
 
-@media(max-width: 1023px) {
-
+@media (max-width: 1023px) {
   .start-home {
     padding-left: 94px;
 
@@ -139,7 +138,7 @@
       left: -70px;
       width: 330px;
       height: 466px;
-      background-image: url(../img/triangle-tablet.svg);
+      background-image: url("../img/triangle-tablet.svg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -147,7 +146,7 @@
   }
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .start-home {
     width: 87%;
     padding-left: 21px;
