--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1153,6 +1153,7 @@ input[type="radio"].visually-hidden {
   margin-top: 40px;
   margin-bottom: 37px; }
   .form__field-textarea textarea {
+    resize: none;
     width: 100%;
     height: 154px;
     -webkit-box-sizing: border-box;
@@ -1488,11 +1489,36 @@ input[type="radio"].visually-hidden {
       background-color: rgba(98, 105, 98, 0.2);
       top: 41px;
       left: -32px; }
+    .page-footer__nav p::before {
+      content: "";
+      position: absolute;
+      top: 7px;
+      right: 17px;
+      width: 16px;
+      height: 1px;
+      background-color: #C4C4C4; }
+    .page-footer__nav p::after {
+      content: "";
+      position: absolute;
+      top: -0.5px;
+      right: 24.5px;
+      width: 1px;
+      height: 16px;
+      background-color: #C4C4C4; }
   .page-footer__contacts {
     margin-top: 30px;
-    margin-right: 0; }
+    margin-right: 0;
+    position: relative; }
     .page-footer__contacts h3 {
       margin-bottom: 30px; }
+      .page-footer__contacts h3::before {
+        content: "";
+        position: absolute;
+        top: 7px;
+        right: 17px;
+        width: 16px;
+        height: 1px;
+        background-color: #C4C4C4; }
     .page-footer__contacts p {
       width: 272px; }
   .page-footer__bottom {
@@ -1716,6 +1742,7 @@ input[type="radio"].visually-hidden {
   padding-top: 60px;
   padding-bottom: 60px;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8); }
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
