--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -31,7 +31,7 @@
   & h3 {
     margin: 0;
     padding-top: 13px;
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -60,7 +60,7 @@
   }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: $table-width) {
   .advantages__list {
     min-height: 622px;
     padding-bottom: 0;
@@ -96,7 +96,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $mobile-width) {
   .advantages__list {
     display: block;
   }
