--- a/source/sass/blocks/callback-form.scss
+++ b/source/sass/blocks/callback-form.scss
@@ -3,7 +3,7 @@
 
   & p:first-of-type {
     width: 100%;
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
@@ -73,7 +73,7 @@
     width: 100%;
     height: 45px;
     background-color: inherit;
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
