--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $mobile-width) {
   .container {
     padding: 0 16px 0 14px;
   }
