--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -31,7 +31,7 @@
   padding: 0;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $mobile-width) {
   .footer-nav__list {
     display: none;
   }
