--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -8,7 +8,7 @@
 
   & p:first-of-type {
     width: 100%;
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 36px;
@@ -53,6 +53,7 @@
   margin-bottom: 37px;
 
   & textarea {
+    resize: none;
     width: 100%;
     height: 154px;
     box-sizing: border-box;
@@ -78,7 +79,7 @@
     width: 270px;
     height: 45px;
     background-color: inherit;
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -129,7 +130,7 @@
   }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: $table-width) {
   .form {
     width: 100%;
 
@@ -151,7 +152,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $mobile-width) {
   .form {
     & p:first-of-type {
       font-size: 28px;
