--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -38,7 +38,7 @@
     margin: 0;
     bottom: -97px;
     left: 223px;
-    color: #1b2d37;
+    color: $color-f;
     opacity: 0.5;
   }
 
@@ -52,7 +52,7 @@
   width: 35.5%;
 
   & p {
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 15px;
@@ -69,12 +69,12 @@
   width: 333px;
 
   & h3 {
-    font-family: "Roboto Condensed", "Calibri", sans-serif;
+    font-family: $font-robotoCondensed, "Calibri", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 15px;
     line-height: 16px;
-    color: #1b2d37;
+    color: $color-f;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     margin: 0;
@@ -85,7 +85,7 @@
     margin: 0;
     font-size: 15px;
     line-height: 25px;
-    color: #1b2d37;
+    color: $color-f;
     opacity: 0.5;
   }
 
@@ -94,7 +94,7 @@
     line-height: 25px;
     display: block;
     text-decoration: none;
-    color: #1b2d37;
+    color: $color-f;
     opacity: 0.5;
 
     &:hover {
@@ -115,7 +115,7 @@
     line-height: 24px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #1b2d37;
+    color: $color-f;
     opacity: 0.5;
     margin-right: 31.8%;
   }
@@ -124,7 +124,7 @@
     font-size: 13px;
     line-height: 24px;
     letter-spacing: 0.04em;
-    color: #1b2d37;
+    color: $color-f;
     opacity: 0.5;
     text-decoration: none;
     display: block;
@@ -140,7 +140,7 @@
   }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: $table-width) {
   .page-footer {
     &::before {
       content: "";
@@ -200,7 +200,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $mobile-width) {
   .page-footer__inner {
     padding-top: 48px;
     padding-left: 15px;
@@ -256,14 +256,45 @@
       top: 41px;
       left: -32px;
     }
+
+    & p::before {
+      content: "";
+      position: absolute;
+      top: 7px;
+      right: 17px;
+      width: 16px;
+      height: 1px;
+      background-color: #C4C4C4;
+    }
+
+    & p::after {
+      content: "";
+      position: absolute;
+      top: -0.5px;
+      right: 24.5px;
+      width: 1px;
+      height: 16px;
+      background-color: #C4C4C4;
+    }
   }
 
   .page-footer__contacts {
     margin-top: 30px;
     margin-right: 0;
+    position: relative;
 
     & h3 {
       margin-bottom: 30px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 7px;
+        right: 17px;
+        width: 16px;
+        height: 1px;
+        background-color: #C4C4C4;
+      }
     }
 
     & p {
