--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,6 +1,6 @@
 body {
   min-width: 320px;
-  font-family: "PT Mono", "Calibri", sans-serif;
+  font-family: $font-mono, "Calibri", sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
