--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -264,7 +264,7 @@
       right: 17px;
       width: 16px;
       height: 1px;
-      background-color: #C4C4C4;
+      background-color: #c4c4c4;
     }
 
     & p::after {
@@ -274,7 +274,7 @@
       right: 24.5px;
       width: 1px;
       height: 16px;
-      background-color: #C4C4C4;
+      background-color: #c4c4c4;
     }
   }
 
@@ -293,7 +293,7 @@
         right: 17px;
         width: 16px;
         height: 1px;
-        background-color: #C4C4C4;
+        background-color: #c4c4c4;
       }
     }
 
