--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -109,6 +109,7 @@
     padding-top: 9px;
     font-size: 14px;
     line-height: 16px;
+    cursor: pointer;
 
     &::before {
       content: "";
